# pomelo

./: CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  dev-requirements.txt  environment.yaml  requirements.txt  setup.cfg
examples/: example_dloptimization.yaml  example_dltrain.yaml  example_encoding.yaml  example_generative.yaml  example_mloptimization.yaml  example_mltrain.yaml  example_topicmodelling.yaml
harddisc/: __main__.py  metrics.json
harddisc/drivers/: dloptimizationdriver.py  dltraindriver.py  encodedriver.py  generativedriver.py  mloptimizationdriver.py  mltraindriver.py  pomelodriver.py  topicmodeldriver.py
harddisc/ensemble/: ensemble_factory.py  ensemble_model.py  ensemble_wrapper.py
harddisc/feature_extraction/: extractor.py  preprocessor.py  reducer.py
harddisc/generative/: dataset.py  generative_model.py  generative_model_chatgpt.py  generative_model_hf_api.py  generative_model_offline.py  generative_model_openai.py  utils.py
harddisc/llm/: deeplearningmodel.py  dl_factory.py  llmdataset.py
harddisc/ml/: dataset.py  machinelearningmodel.py  ml_factory.py
harddisc/topicmodelling/: bertopic.py  lda.py
harddisc/validation/: dataset.py  dloptimization.py  dltrain.py  encoding.py  generative.py  mloptimization.py  mltrain.py  pomelo.py  topicmodel.py
harddisc/visualization/: utils.py
test/: test_data.csv  test_jargon.csv
test/bad_datasets/: not_csv.tsv
test/config/: test_dataset.py  test_dloptimization.py  test_dltrain.py  test_encoding.py  test_generative.py  test_mloptimization.py  test_mltrain.py  (+1 more)
(+64 files in other folders)
