[metadata]
name= harddisc
version= 1.0.0
description=HARDDISC Multimodal AutoML Suite
packager = Kuleen Sasse<Kuleen.Sasse@jhuapl.edu>

[options]
packages = find:
install_requires = 
    pandas
    pyyaml
    dvc
    matplotlib
    plotly
    scikit-learn
    tqdm
    optuna
    transformers
    nltk
    sentence-transformers
    umap-learn
    func_timeout
    bertopic
    scikit-learn-intelex
    kaleido
    xgboost
    openai 
    backoff
    accelerate
    multimodal-transformers
    torchensemble
    peft

[tool:pytest]
testpaths =
    test